src/test/ui/non-exhaustive/non-exhaustive-float-range-match.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/non-exhaustive-float-range-match.rs:10:11
   |
LL |     match 0.0 { //~ ERROR non-exhaustive patterns
   |           ^^^ pattern `_` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
